--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container">
 			<div class="card-design" id="introduction">
 				<h1>Hello, I'm Oscar</h1>
-					<img src="images/profile-picture.jpg" alt="Oscar le plus beau" id="Oscar">
+					<img src="images/profile-picture.png" alt="Oscar le plus beau" id="Oscar">
 					<p >Passionate about music and fashion, I am currently studying for a Bachelor's degree in Commerce and Management at IESEG. I would love to be hired in one of these sectors to bring my creativity.</p>
 					<a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjBr4yj7532AhX_kGgJHYqfAhwYABAAGgJ3Zg&ae=2&ohost=www.google.com&cid=CAESWuD2NdzV3W5YMm1XKgJ0iZAjaeFgKX9bhmOgTOA8T7tC12nY8WV8wkjpoZwpbyERGV34ltMwrRJkJyqB5J1WN04200C9qsSEkt6liC0_GCMcZ3KsxfE5n4GZyg&sig=AOD64_0ekGI25Vme4ULNxq25GmgyMP3ZFg&q&adurl&ved=2ahUKEwjZ4ISj7532AhUKzYUKHZ_gA6IQ0Qx6BAgDEAE"target="_blank" class="btn-green">Discover Ieseg</a>
 				</div>
